--- a/style.css
+++ b/style.css
@@ -6,10 +6,8 @@ body {
   height: 100%;
   margin: 0px;
   border: 0;
-  overflow: hidden;
-  /*  Disable scrollbars */
-  display: block;
-  /* No floating content on sides */
+  overflow: hidden; /*  Disable scrollbars */
+  display: block; /* No floating content on sides */
 }
 
 input {
@@ -37,13 +35,26 @@ canvas {
   position: fixed;
 }
 
+.container { 
+  height: 200px;
+  position: relative;
+  border: 3px solid green; 
+}
+
 .button {
   background-color: #272a2a;
   border: none;
+  font-family: 'Courier';
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 64px;
+  margin: 0;
+  position: relative;
+  top: 500px;
+  left: 590px;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
