Lot of new things
- Phone calls
- New tasks (and new task system with difficulty value)
- Improved menu and death screens
- New (scarier) jumpscare
- Changed Chica to be a frog emoji, because it's front-facing.
- Bots won't stay on top of the player if they are hiding.
- Input bar as now new things.
- Sabotages will be more frequent.
- Some bug fixes...

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ canvas {
 }
 
 .button {
-  background-color: #272a2a;
+  background-color: black;
   border: none;
   font-family: 'Courier';
   color: white;
@@ -50,11 +50,6 @@ canvas {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 64px;
+  font-size: 58px;
   margin: 0;
-  position: relative;
-  top: 500px;
-  left: 590px;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
 }
